[package]
name = "gnostr-command"
version = "0.0.1"
edition = "2018"
description = "gnostr-command: gnostr rust command template"
authors = ["admin@gnostr.org <admin@gnostr.org>"]
readme = "README.md"
homepage = "https://github.com/gnostr-org/gnostr-command"
repository = "https://github.com/gnostr-org/gnostr-command"
license = "MIT"
keywords = ["gnostr","nostr", "git"]
categories = ["command-line-utilities","git"]

[dependencies]
#rust-crypto = "0.2.36"
#git2        = "0.9.1"
time = "0.1.42"
chrono = "0"
io = "0.0.2"
use = "0.0.0"
